--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ a:hover{
 .work-text {
     text-align: right;
     margin-top: 65px;
+    margin-left: 90px;
     font-size: 12px;
 }
 .copyright{
