--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a:hover{
     z-index: -1;
 }
 .work-text {
-    text-align: right;
+    text-align: center;
     margin-top: 65px;
     margin-left: 90px;
     font-size: 12px;
